# clinical-nlp-extractor

./: .gitignore  README.md  pyproject.toml
data/sample_reports/: note_001.txt  note_002.txt  note_003.txt  note_004.txt  note_005.txt
data/sample_reports_bad/: bad1.txt  bad2.txt  bad_note_001.txt  bad_note_002.txt
scripts/: backup_db.py  dashboard.py  demo.sh  ingest_reports.py  migrate_sqlite.py  restore_db.py
src/: __init__.py  audit.py  doctor.py  extractor.py  ingest.py  models.py  quarantine.py  validate.py
tests/: test_audit_cli.py  test_backup_restore.py  test_edss_diagnosis_fields.py  test_extractor.py  test_ingest.py  test_integrity.py  test_ms_extractor_fields.py  test_quarantine.py  test_quarantine_cli.py  test_validate.py
